--- a/src/pages/account.astro
+++ b/src/pages/account.astro
@@ -27,7 +27,7 @@ const { data: profileData } = await supabase
   .from("profiles")
   .select("username")
   .eq("id", user.id)
-  .single();
+  .maybeSingle();
 
 if (profileData?.username) {
   profileUsername = profileData.username;
